<resources>
    <string name="app_name">ChatApp</string>
    <string name="splash_icon">Splash Icon</string>
    <string name="email_hint">yourname@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="agree_terms">Tôi đồng ý với các chính sách và điều khoản</string>
    <string name="already_have_account">Đã có tài khoản? </string>
    <string name="sign_in_now">Đăng nhập ngay</string>
    <string name="chat_menu">Tin nhắn</string>
    <string name="friends_menu">Bạn bè</string>
    <string name="profile_menu">Trang cá nhân</string>
    <string name="request">YÊU CẦU</string>
    <string name="message_hint">Nhập tin nhắn...</string>
    <string name="message_send_discription">Gửi tin nhắn</string>
    <string name="back_btn_description">Quay lại</string>
    <string name="attachment_btn_description">Đính kèm</string>
    <string name="detail_profile_title">Chỉnh sửa thông tin</string>
    <string name="save">Lưu</string>
    <string name="name">HỌ VÀ TÊN</string>
    <string name="phone_number">SỐ ĐIỆN THOẠI</string>
    <string name="dob">NGÀY SINH</string>
    <string name="birthday_icon_description">Biểu tượng sinh nhật</string>
    <string name="friend">Bạn bè</string>
    <string name="new_chat_btn_description">Tạo cuộc trò chuyện mới</string>
    <string name="friend_search_hint">Tìm kiếm bạn bè...</string>
    <string name="cancel">Hủy</string>
    <string name="result_not_found">Không tìm thấy kết quả phù hợp</string>
    <string name="icon_search_not_found_description">Biểu tượng không tìm thấy</string>
    <string name="tab_layout_description">Bố cục tab cho bạn bè</string>
    <string name="message">Tin nhắn</string>
    <string name="new_friend_btn_description">Tạo bạn bè mới</string>
    <string name="message_search_hint">Tìm kiếm tin nhắn...</string>
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="recently">Vừa rồi</string>
    <string name="add_friend">Kết bạn</string>
    <string name="remove_add_chat_descriptio">Xóa mục thêm trò chuyện</string>
    <string name="create_message">Tạo tin nhắn</string>
    <string name="friend_list">DANH SÁCH BẠN BÈ</string>
    <string name="create_chat_btn_description">Tạo chat mới</string>
    <string name="avatar_image_description">Ảnh đại diện</string>
    <string name="awesome_chat">Awesome chat</string>
    <string name="edit_profile_icon_description">Edit Icon</string>
    <string name="language">Ngôn ngữ</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="notification">Thông báo</string>
    <string name="version_icon_description">Biểu tượng phiên bản</string>
    <string name="app_version">Phiên bản ứng dụng</string>
    <string name="version_value">1.0.0</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="experience_awesome_chat">Trải nghiệm Awesome chat</string>
    <string name="paper_plane_icon_description">Paper Plane Icon</string>
    <string name="register">Đăng ký</string>
    <string name="user_name">TÊN NGƯỜI DÙNG</string>
    <string name="user_name_hint">Nhập tên người dùng</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="sign_up">Đăng ký</string>
    <string name="name_hint">Tên của bạn</string>
    <string name="select_language">Chọn ngôn ngữ</string>
    <string name="english">Tiếng Anh</string>
    <string name="ok">OK</string>
    <string name="min_unit">p</string>
    <string name="hour_unit">g</string>
    <string name="chat_result_found">tin nhắn phù hợp</string>
    <string name="all">TẤT CẢ</string>
    <string name="decline">Từ chối</string>
    <string name="agree">Đồng ý</string>
    <string name="user_alt">Người dùng</string>
    <string name="you">Bạn</string>
    <string name="notification_permission_rationale">Ứng dụng cần quyền gửi thông báo để báo tin nhắn mới.</string>
    <string name="notification_permission_settings_hint">Bạn đã tắt quyền thông báo. Mở cài đặt để bật lại?</string>
    <string name="open_settings">Mở cài đặt</string>
    <string name="sending">Đang gửi...</string>
    <string name="reply">Trả lời</string>
    <string name="send">Gửi</string>
    <string name="email_helper_text">Hãy nhập email hợp lệ</string>
    <string name="password_helper_text">Mật khẩu phải dài ít nhất 6 ký tự</string>
    <string name="full_name_helper_text">Hãy nhập tên của bạn</string>
    <string name="term_warning">Hãy đọc và chấp nhận chính sách</string>
</resources>