<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        android:paddingVertical="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato_bold"
                android:text="@string/friend"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddFriend"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/new_friend_btn_description"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="5dp"
                app:icon="@drawable/ic_add_friend"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="@color/primary_blue"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSearch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundColor="@android:color/white"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="#E0E0E0"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@color/primary_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/friend_search_hint"
                    android:inputType="text"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                tools:visibility="visible" />

        </LinearLayout>
    </LinearLayout>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvChatList"
        style="@style/CustomCardViewStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSearchTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/friend"
                android:textAllCaps="true"
                android:textColor="@color/icon_dark_gray"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/cvChatList"
                app:layout_constraintTop_toTopOf="@+id/cvChatList"
                tools:ignore="TextContrastCheck"
                tools:visibility="visible" />

            <com.google.android.material.tabs.TabLayout
                android:layout_marginTop="5dp"
                android:id="@+id/tlFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:tabIndicatorColor="@color/primary_blue"
                app:tabSelectedTextColor="@color/primary_blue"
                app:tabTextColor="@color/text_gray"
                app:tabMode="fixed"
                app:tabGravity="fill"
                android:contentDescription="@string/tab_layout_description"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPeopleList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:clipToPadding="false"
                android:paddingHorizontal="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="16dp"
                tools:listitem="@layout/item_friend_request" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



    <LinearLayout
        android:id="@+id/llNoSearchResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/cvChatList"
        app:layout_constraintStart_toStartOf="@id/cvChatList"
        app:layout_constraintBottom_toBottomOf="@id/cvChatList"
        android:paddingTop="90dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_search_not_found_description"
            android:src="@drawable/ic_search_not_found"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_not_found"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/lato_bold"
            android:paddingTop="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>